@@ -16,6 +16,12 @@ require_once(LIBVENDORDIR . '/autoload.php');
 // import-{REST,XML}feed scripts, so suppress empty value.
 $ip = @$_SERVER['REMOTE_ADDR'];
 
+session_name('domjudge_session');
+
+session_set_cookie_params(0, preg_replace('/\/(api|jury|public|team)\/?$/', '/',
+                                          dirname($_SERVER['PHP_SELF'])),
+                          null, false, true);
+
 $teamid = NULL;
 $username = NULL;
 $teamdata = NULL;
